# pico-firmware-switcher

./: .gitignore  README.txt  detect_firmware.py  pico-switcher.toml.example  pico.py  pico_cli.py  pico_mpremote.py  pico_switch.py  requirements.txt
.github/workflows/: ci.yml
cpp/: .gitignore  CMakeLists.txt  bootloader_trigger.cpp  hello_world.cpp  managed_runtime.cpp  switcher_client.h
docs/: client-contract.md  profile-deployment-plan.md
examples/demo_cpp/: client_app.cpp
examples/demo_py/: demo_app.py
pico_switcher/: __init__.py  pico_backup.py  pico_cli.py  pico_cpp.py  pico_cpp_contract.py  pico_device.py  pico_log.py  pico_micropython.py  pico_mpremote.py  pico_profiles.py  pico_switch.py  pico_systemd.py
pico_switcher/cli/: __init__.py  handlers.py  history.py  parser.py  runner.py  utils.py
py/: boot.py  bootloader_trigger.py  main.py  remove_app.py
shell/: install_micropython_files.sh  load_cpp_bootloader_uf2.sh  load_micropython_uf2.sh  load_uf2.sh  trigger_py_boot.sh
tests/: test_pico_cli_refactor.py  test_pico_cpp.py  test_pico_logging.py  test_pico_micropython.py  test_pico_profiles.py
uf2s/: bootloader_trigger.uf2
